[package]
name = "rust-nn"
version = "0.1.0"
authors = ["Hugo Kempfer <hugkempf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.24.0", features = ["serde-serialize"]}
rand = "0.8.3"
serde = {version = "1.0.123", features = ["derive"]}
ron = "0.6.4"
mnist = {version = "0.4.1", features = ["download"]}
pbr = "1.0.4"
clap = "3.0.0-beta.2"